	* libm2skernel/syscall.c: system call 'setrlimit' with RLIMIT_STACK
		implemented.

2010-01-12
	* libm2skernel/syscall.c: system call 'setrlimit' ignored again.
	* libcachesystem/moesi.c: debug information for access retries.

2010-01-14
	* libm2skernel/uop1.dat, uop2.dat: uops load_esi, load_edi, load_moffs
		deleted. The same with stores. Number of odeps for uops changed
		to 4, and those uops with 5 uops have been changed.

2010-01-15
	* libstruct, libmisc, ptrace: function calls to 'fgets' changed to
		capture the return value and avoid warnings in some gcc versions.

2010-02-06
	* fetch.c: bug fixed. Sequence number of macroinstruction (uop->mop_seq)
		was not correctly assigned.
	* m2s.h: field uop->di_seq added, for dispatch sequence numbers.
	* writeback.c: bug fixes when recovering from mispeculation. The condition
		to call 'p_recover' has been changed.
	* fu.c, m2s.h: functional units - options and operators
	* m2s-pipeline: new tool to analyze pipeline traces

2010-02-16
	* network.c: new model for interconnection network, using a more accurate
		switch model.
	* cachesystem: updated for new interconnect model.

2010-02-22
	* memory.c, m2skernel.h: global memory 'mem_safe_mode'. Default value is
		true. If false, memory is accessed unsafely without providing
		segmentation faults.

2010-02-23
	* loader.c: the original argument list is not artificially modified
		anymore. There was a problem when the program header table was
		loaded for dynamic linking. The AT_ENTRY program header should
		store the entry point for the main program, and not for the
		program interpreter. Bug fixed. Still, dynamic loading does not
		work for other machines.
	* misc.c: function 'map_value_string' improved.
	* syscall.c: system call mmap and mmap2 fixed. The system call mmap takes
		its arguments from memory, instead of registers.
	* elf.c: function 'elf_merge_symtab' implemented, to merge symbol tables
		from an executable and the program interpreter.
